[package]
name = "evno"
version = "0.6.0"
edition = "2024"
authors = ["Numeration<boxed87@outlook.com>"]
description = "A high-performance event bus for asynchronous tasks and event-driven systems."
license-file = "LICENSE"
repository = "https://github.com/Numeration/evno"
readme = "README.md"
documentation = "https://docs.rs/evno"
keywords = ["event-bus", "async", "lock-free", "performance", "actor"]
categories = ["asynchronous", "concurrency", "data-structures"]

[dependencies]
acty = "1"
async-stream = "0.3"
futures = "0.3"
gyre = "1"
papaya = "0.2"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
trait-variant = "0.1"
crossbeam-utils = "0.8"


